[gd_scene load_steps=6 format=2]

[ext_resource path="res://Commodity.gd" type="Script" id=1]
[ext_resource path="res://icons/cut-diamond.png" type="Texture" id=2]
[ext_resource path="res://effects/suck.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.7681, 17.3495 )

[sub_resource type="Animation" id=2]
resource_name = "wobble"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ), Vector2( 0.5, 0.5 ), Vector2( 0.2, 0.2 ), Vector2( 0.25, 0.25 ) ]
}

[node name="Commodity" type="Area2D" groups=[
"collectibles",
]]
collision_layer = 16
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -25.469

[node name="DestructionTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="WobbleTimer" type="Timer" parent="."]
wait_time = 1.75
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/wobble = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_Commodity_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Commodity_body_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
[connection signal="timeout" from="DestructionTimer" to="." method="_on_DestructionTimer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="timeout" from="WobbleTimer" to="." method="_on_WobbleTimer_timeout"]
